<resources>
    <string name="app_name">Wifi Location Logger</string>

    <string name="unknown" translatable="false">—</string>
    <string name="logging_start">Start logging</string>
    <string name="logging_stop">Pause logging</string>
    <string name="remote_log">Send to server</string>
    <string name="remote_log_warning">Note: The remote logging connection is currently unencrypted. Data may be intercepted by third parties.\nRemote logging is experimental.</string>
    <!--string name="delete_logs">Delete logs</string-->
    <string name="location">Location</string>
    <string name="latitude_longitude">Lat-/Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="last_update">Last Update</string>
    <string name="wifi">Wifi</string>
    <string name="ssid_filter">SSID Filter</string>
    <string name="ssid_filter_hint">regular expression</string>
    <string name="ssid_filter_default" translatable="false">{F,f}reifunk</string>
    <string name="wifis_list">Wifi List</string>
    <string name="upload_url_default" translatable="false">http://niobe.tomjanson.com:34570/</string>
    <string name="upload_to_server">Upload to server</string>
    <string name="upload_explanation">Pressing upload will upload the entire current log file, i.e., all data logged today.\nIf you wish to exclude data, you must remove it from the log file before uploading.\nUploading older log files is not yet supported.</string>
    <string name="upload_file_not_found">FileNotFoundException</string>
    <string name="upload_successful">Upload successful</string>
    <string name="upload_failed">Upload failed!</string>
    <string name="server">Server</string>
    <string name="server_url">Server URL</string>
</resources>
